--- a/app/views/fetf/application/v1-0/about-items/equipment-summary.html
+++ b/app/views/fetf/application/v1-0/about-items/equipment-summary.html
@@ -17,7 +17,7 @@
 
     <form action="/fetf-items-summary" method="post">
 
-    <h1 class="govuk-heading-l">Items details summary</h1>
+    <h1 class="govuk-heading-l">Item summary</h1>
 
     <h2 class="govuk-heading-m">Livestock information</h2>
 
@@ -46,7 +46,7 @@
       </div>
     </dl>
 
-    <h2 class="govuk-heading-m">Items location</h2>
+    <h2 class="govuk-heading-m">Item location</h2>
 
     <dl class="govuk-summary-list govuk-!-margin-bottom-9">
       <div class="govuk-summary-list__row">
@@ -63,7 +63,7 @@
     </dl>
 
 
-    <h2 class="govuk-heading-m">Items contracting</h2>
+    <h2 class="govuk-heading-m">Contracting</h2>
 
     <dl class="govuk-summary-list govuk-!-margin-bottom-9">
       <div class="govuk-summary-list__row">
