--- a/app/views/fetf/application/v1-0/business-details/farm-assurance.html
+++ b/app/views/fetf/application/v1-0/business-details/farm-assurance.html
@@ -27,7 +27,7 @@
               </h2>
             </legend>
             <div id="assurance-scheme-hint" class="govuk-hint">
-              Select all that apply.
+              Select all that apply
             </div>
             <div class="govuk-checkboxes" data-module="govuk-checkboxes">
               <div class="govuk-checkboxes__item">
@@ -45,7 +45,7 @@
               <div class="govuk-checkboxes__item">
                 <input class="govuk-checkboxes__input" id="assurance-scheme-3" name="assurance-scheme" type="checkbox" value="retailer">
                 <label class="govuk-label govuk-checkboxes__label" for="assurance-scheme-3">
-                  Retailer Scheme
+                  Retailer scheme
                 </label>
               </div>
               <div class="govuk-checkboxes__item">
