--- a/app/views/fetf/application/v1-0/selected-items.html
+++ b/app/views/fetf/application/v1-0/selected-items.html
@@ -53,7 +53,7 @@
 
 
 <div class="govuk-button-group">
-  <a href="/fetf/application/v1-0/select-items-complete" method="post">
+  <a href="/fetf/activity-list/v2-0/?fetf-status=01b&fetf-apply=02b&fetf-agree=01&fetf-claim=01" method="post">
     <button type="submit" class="govuk-button" data-module="govuk-button">
     Apply for these items
     </button>
