--- a/app/views/fetf/application/v1-0/submit-application/submit.html
+++ b/app/views/fetf/application/v1-0/submit-application/submit.html
@@ -68,16 +68,28 @@
     </span>
 
 
-    <button type="submit" class="govuk-button" data-module="govuk-button">
-      Submit application
-    </button>
-<br>
 
-</form>
+    <div class="govuk-button-group">
+      <button type="submit" class="govuk-button" data-module="govuk-button">
+        Submit application
+      </button>
+      <br>
+      
+      </form>
+      
+      
+      
+        <a href="/fetf/activity-list/v2-0/?fetf-status=01b&fetf-apply=02f&fetf-agree=01&fetf-claim=01" class="govuk-link">
+          Cancel
+        
+        </a>
+      </div>
+    
 
-    <button type="submit" class="govuk-button govuk-button--secondary" data-module="govuk-button">
-      Cancel
-    </button>
+
+   
+
+    
 
 </main>
 
