--- a/app/views/fetf/claim/v1-0/gps2.html
+++ b/app/views/fetf/claim/v1-0/gps2.html
@@ -186,7 +186,7 @@ function showVisualEvidenceSection() {
 
      <a href="upload?01=c&02=c&03=c&04=c&05=c&06=c">
         <button class="govuk-button">
-          Continue
+          Save and continue
         </button>
       </a>
 
