--- a/app/views/fetf/claim/v1-0/harvest2.html
+++ b/app/views/fetf/claim/v1-0/harvest2.html
@@ -187,7 +187,7 @@ function showVisualEvidenceSection() {
 
      <a href="upload?01=c&02=c&03=c&04=n&05=n&06=n">
         <button class="govuk-button">
-          Continue
+          Save and continue
         </button>
       </a>
 
