--- a/app/views/fetf/claim/v1-0/paper-pot.html
+++ b/app/views/fetf/claim/v1-0/paper-pot.html
@@ -296,7 +296,7 @@
 
       <a href="paper-pot2">
         <button class="govuk-button">
-          Continue
+          Save and continue
         </button>
       </a>
 
