--- a/app/views/fetf/claim/v1-0/paper-pot2.html
+++ b/app/views/fetf/claim/v1-0/paper-pot2.html
@@ -179,7 +179,7 @@ function showVisualEvidenceSection() {
 
      <a href="upload?01=c&02=n&03=n&04=n&05=n&06=n">
         <button class="govuk-button">
-          Continue
+          Save and continue
         </button>
       </a>
 
