--- a/app/views/fetf/claim/v1-0/shoe.html
+++ b/app/views/fetf/claim/v1-0/shoe.html
@@ -296,7 +296,7 @@ Upload5
 
       <a href="shoe2">
         <button class="govuk-button">
-          Continue
+          Save and continue
         </button>
       </a>
 
