--- a/app/views/fetf/claim/v1-0/slurry2.html
+++ b/app/views/fetf/claim/v1-0/slurry2.html
@@ -182,7 +182,7 @@ function showVisualEvidenceSection() {
 
      <a href="upload?01=c&02=c&03=c&04=c&05=n&06=n">
         <button class="govuk-button">
-          Continue
+          Save and continue
         </button>
       </a>
 
