--- a/app/views/fetf/claim/v1-0/summary.html
+++ b/app/views/fetf/claim/v1-0/summary.html
@@ -957,7 +957,8 @@
 
       <a href="index?fetf-status=03&fetf-apply=03b&fetf-agree=03&fetf-claim=02d">
         <button class="govuk-button" data-module="govuk-button">
-          Continue
+          Save and continue
+          
         </button>
       </a>
 
