--- a/app/views/fetf/claim/v1-0/upload bakup.html
+++ b/app/views/fetf/claim/v1-0/upload bakup.html
@@ -439,7 +439,7 @@
 
       <a href="/ftf/application/v3-0/letters/upload10?10=complete">
         <button class="govuk-button">
-          Continue
+          Save and continue
         </button>
       </a>
 
