--- a/app/views/fetf/agreement/v1-3/review-terms-and-conditions.html
+++ b/app/views/fetf/agreement/v1-3/review-terms-and-conditions.html
@@ -44,7 +44,7 @@ Review terms and conditions
         </div>
 
           {{govukButton({
-              text: "Continue"
+              text: "Save and continue"
           })}}
         
         </form>
