--- a/app/views/fetf/application/v1-0/business-details/check-your-details.html
+++ b/app/views/fetf/application/v1-0/business-details/check-your-details.html
@@ -4,7 +4,10 @@
 
 {% block beforeContent %}
 {% include "../../../_includes/phase-banner_alpha.html" %}
-<a href="equipment-list" class="govuk-back-link">Back</a>
+{{ govukBackLink({
+  text: "Back",
+  href: "javascript:history.back()"
+}) }}
 {% endblock %}
 
 {% block content %}
