--- a/app/views/fetf/application/v1-0/submit-application/submit.html
+++ b/app/views/fetf/application/v1-0/submit-application/submit.html
@@ -16,7 +16,10 @@
 </div>
 
 
-<a href="#" class="govuk-back-link">Back</a>
+{{ govukBackLink({
+  text: "Back",
+  href: "javascript:history.back()"
+}) }}
 
 
 
