--- a/app/views/fetf/claim/v1-0/harvest.html
+++ b/app/views/fetf/claim/v1-0/harvest.html
@@ -297,7 +297,7 @@ Upload3
 
       <a href="harvest2">
         <button class="govuk-button">
-          Continue
+          Save and continue
         </button>
       </a>
 
