--- a/app/views/fetf/claim/v1-0/salad.html
+++ b/app/views/fetf/claim/v1-0/salad.html
@@ -296,7 +296,7 @@ Upload2
 
       <a href="salad2">
         <button class="govuk-button">
-          Continue
+          Save and continue
         </button>
       </a>
 
