--- a/app/views/fetf/claim/v1-0/slurry.html
+++ b/app/views/fetf/claim/v1-0/slurry.html
@@ -296,7 +296,7 @@ Upload4
 
       <a href="slurry2">
         <button class="govuk-button">
-          Continue
+          Save and continue
         </button>
       </a>
 
