--- a/app/views/fetf/claim/v1-0/upload.html
+++ b/app/views/fetf/claim/v1-0/upload.html
@@ -311,7 +311,7 @@
 
       <a href="summary">
         <button class="govuk-button">
-          Continue
+          Save and continue
         </button>
       </a>
 
