Selected items basket

--- a/app/views/fetf/application/v1-0/business-details/business-structure.html
+++ b/app/views/fetf/application/v1-0/business-details/business-structure.html
@@ -32,31 +32,26 @@
             <!-- <div id="business-structure-hint" class="govuk-hint">
               Select all that apply.
             </div> -->
-            <div class="govuk-radios" data-module="govuk-radios">
-              <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="structure" name="structure" type="radio" value="landowner">
-                <label class="govuk-label govuk-radios__label" for="structure">
+            <div class="govuk-checkboxes" data-module="govuk-checkboxes">
+              <div class="govuk-checkboxes__item">
+                <input class="govuk-checkboxes__input" id="structure" name="structure" type="checkbox" value="landowner">
+                <label class="govuk-label govuk-checkboxes__label" for="structure">
                   Landowner
                 </label>
               </div>
-              <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="structure-2" name="structure" type="radio" value="tenant">
-                <label class="govuk-label govuk-radios__label" for="structure-2">
+              <div class="govuk-checkboxes__item">
+                <input class="govuk-checkboxes__input" id="structure-2" name="structure" type="checkbox" value="tenant">
+                <label class="govuk-label govuk-checkboxes__label" for="structure-2">
                   Tenant farmer
                 </label>
               </div>
-              <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="structure-3" name="structure" type="radio" value="contractor">
-                <label class="govuk-label govuk-radios__label" for="structure-3">
+              <div class="govuk-checkboxes__item">
+                <input class="govuk-checkboxes__input" id="structure-3" name="structure" type="checkbox" value="contractor">
+                <label class="govuk-label govuk-checkboxes__label" for="structure-3">
                   Contractor
                 </label>
               </div>
-              <div class="govuk-radios__item">
-                <input class="govuk-radios__input" id="structure-4" name="structure" type="radio" value="agent">
-                <label class="govuk-label govuk-radios__label" for="structure-4">
-                  Agent
-                </label>
-              </div>
+              
             </div>
           </fieldset>
 
