--- a/app/views/fetf/_includes/selected-items-panel.html
+++ b/app/views/fetf/_includes/selected-items-panel.html
@@ -24,6 +24,7 @@
     <hr>
     <p>Total amount<p style="text-align: right;">{{ grantTotal | currency }}</p></p>
 </div>
+<p class="govuk-body-s">The minimum grant you can apply for is £1,000 and the maximum grant is £50,000.</p>
 {% endif %}
 
 
