Updated selected items

--- a/app/views/fetf/_includes/selected-items-panel.html
+++ b/app/views/fetf/_includes/selected-items-panel.html
@@ -25,7 +25,7 @@
         {% endif %}
     {% endfor %}
     <hr>
-    <p>Total amount&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<b>{{ grantTotal | currency }}</b></p>
+    <p>Total amount: <b>{{ grantTotal | currency }}</b></p>
 </div>
 <p class="govuk-body-s">The minimum grant you can apply for is £1,000 and the maximum grant is £50,000.</p>
 </div>
