--- a/app/views/fetf/claim/v1-0/upload.html
+++ b/app/views/fetf/claim/v1-0/upload.html
@@ -309,6 +309,44 @@
       </ol>
 
 
+
+
+      {% set grantTotal = 0 %}
+      {% set scoreTotal = 0 %}
+      {% for item in data['selected-items'] %}
+        {% set grantTotal = grantTotal + item.grantTotal %}
+        {% set scoreTotal = scoreTotal + item.score %}
+      {% endfor %}
+      
+      
+      
+      <!-- TABLE CONTENT -->
+      <table class="govuk-table">
+        
+        <thead class="govuk-table__head">
+          <tr class="govuk-table__row">
+            <th scope="col" class="govuk-table__header">Item description</th>
+            <th scope="col" class="govuk-table__header"></th>
+            
+          </tr>
+        </thead>
+        <tbody class="govuk-table__body">
+          {% for item in data['selected-items'] %}
+            <tr class="govuk-table__row">
+              <td class="govuk-table__cell">{{ item.title }}</td>
+              <td class="govuk-table__cell">Completed</td>
+              
+            </tr>
+          {% endfor %}
+          
+        </tbody>
+      </table>
+      
+
+
+
+
+
       <a href="summary">
         <button class="govuk-button">
           Save and continue
